# plinycompute

./: .gitignore  CMakeLists.txt  README.md
applications/: Applications.cmake  BenchAggregationBalanced.cc
applications/BenchAggregationBalanced/: BenchAggregationBalanced.cc  CMakeLists.txt
applications/FFTest/: CMakeLists.txt  FFTest.cc
applications/FFTest/sharedLibraries/headers/: FFAggMatrix.h  FFGradientJoin.h  FFHiddenLayerJoin.h  FFInputLayerJoin.h  FFInputLayerJoinSparse.h  FFJoinBackMultTranspose.h  FFJoinBackTransposeMult.h  FFLayerAgg.h  FFMatrixBlock.h  FFMatrixData.h  FFMatrixMeta.h  FFMatrixScanner.h  FFMatrixWriter.h  FFSelectionGradient2.h  FFSelectionSparsify.h  FFSparseBlock.h  FFSparseBlockData.h  FFSparseMatrixScanner.h  FFSparseMatrixWriter.h  FFUpdateJoin.h
applications/FFTest/sharedLibraries/source/: FFAggMatrix.cc  FFGradientJoin.cc  FFHiddenLayerJoin.cc  FFInputLayerJoin.cc  FFInputLayerJoinSparse.cc  FFJoinBackMultTranspose.cc  FFJoinBackTransposeMult.cc  FFLayerAgg.cc  FFMatrixBlock.cc  FFMatrixData.cc  FFMatrixMeta.cc  FFMatrixScanner.cc  FFMatrixWriter.cc  FFSelectionGradient2.cc  FFSelectionSparsify.cc  FFSparseBlockData.cc  FFSparseMatrixScanner.cc  FFSparseMatrixWriter.cc  FFUpdateJoin.cc  MatrixSparseBlock.cc
applications/StandardTPCHBench/: CMakeLists.txt  RunQuery01.cc  RunQuery02.cc  RunQuery03.cc  RunQuery04.cc  RunQuery06.cc  RunQuery12.cc  RunQuery13.cc  RunQuery14.cc  RunQuery17.cc  RunQuery22.cc  tpchDataLoader.cc
applications/TestBackpropLayer/: CMakeLists.txt  TestBackpropLayer.cc
applications/TestBackpropLayer/sharedLibraries/headers/: BPMultiplyAggregation.h  BPMultiplyJoin.h  BPScanner.h  BPStrip.h  BPStripData.h  BPStripMeta.h  BPWriter.h
applications/TestBackpropLayer/sharedLibraries/source/: BPMultiplyAggregation.cc  BPMultiplyJoin.cc  BPScanner.cc  BPStrip.cc  BPStripData.cc  BPStripMeta.cc  BPWriter.cc
applications/TestComputation/: CMakeLists.txt  TestComputation.cc  process_data.py  tcap
applications/TestComputation/sharedLibraries/headers/: Matrix3DScanner.h  Matrix3DWriter.h  MatrixBlock3D.h  MatrixBlockMeta3D.h  MatrixMultiplyAggregation.h  MatrixMultiplyJoin.h  MatrixScanner.h  MatrixSumJoin.h  MatrixWriter.h
applications/TestComputation/sharedLibraries/source/: MatrixBlock3D.cc  MatrixBlockData3D.cc  MatrixScanner.cc  MatrixSumJoin.cc  MatrixWriter.cc
applications/TestConvolution/: CMakeLists.txt  TestConvolution.cc  TestConvolutionVideo.cc
applications/TestConvolution/sharedLibraries/headers/: MatrixBlock3D.h  MatrixBlockData.h  MatrixBlockData3D.h  MatrixBlockMeta3D.h  MatrixConv3DJoin.h  MatrixConvResult.h  MatrixMultiplyJoin.h  MatrixSumJoin.h  Process.h
applications/TestConvolution/sharedLibraries/source/: Matrix3DScanner.cc  Matrix3DWriter.cc  MatrixBlockMeta3D.cc  MatrixConv3DJoin.cc  MatrixConvResult.cc  MatrixScanner.cc  MatrixWriter.cc  Process.cc
applications/TestGMM/: CMakeLists.txt
applications/TestLDA/: CMakeLists.txt  TestLDA.cc
applications/TestLinearAlgebra/: CMakeLists.txt
applications/TestLinearAlgebra/tests/: TestLA_unit01_Transpose.cc  TestLA_unit02_Add.cc  TestLA_unit03_Substract.cc  TestLA_unit04_Multiply.cc  TestLA_unit05_MaxElement.cc
applications/TestMatrixMultiply/: CMakeLists.txt  Test3DMM.cc  TestBMM.cc  TestCMM.cc  TestIndexStructure.cc  TestMatrixMultiply.cc  TestRMM.cc  TestSUMMM.cc
applications/TestMatrixMultiply/sharedLibraries/headers/: BCMMAggregation.h  BCMMJoin.h  IdentSelection.h  MatrixBlock.h  MatrixBlockMeta.h  MatrixIdentitySelection.h  MatrixMultiplyAggregation.h  MatrixMultiplyJoin.h  MatrixSumJoin.h  RMMAggregation.h  RMMDuplicateMultiSelection.h  RMMJoin.h  TensorBlock.h  TensorBlockData.h  TensorBlockMeta.h  TensorScanner.h  TensorWriter.h
applications/TestMatrixMultiply/sharedLibraries/source/: BCMMAggregation.cc  BCMMJoin.cc  IdentSelection.cc  MatrixIdentitySelection.cc  MatrixSumJoin.cc  RMMAggregation.cc  RMMDuplicateMultiSelection.cc  RMMJoin.cc  TensorBlock.cc  TensorBlockData.cc  TensorBlockMeta.cc  TensorScanner.cc  TensorWriter.cc
aws/: README.md  mountAndBuild.sh  mount_and_build.sh  setupAMI.sh  startManager.sh  startWorker.sh
aws/BenchAggregationBalanced/: README.md  run.sh  timings.csv
aws/TestLDA/: run.sh
benchmarks/: BenchAggregationBalanced.cc  Benchmarks.cmake
pdb/src/client/headers/: PDBClient.h  (+11 more)
pdbRoot/: catalog
scripts/: installDependencies.sh
scripts/internal/: cleanupNode.sh  generateTypeCodes.py  setupDependencies.py
scripts/internal/proc/: setupDependencies.py
tests/: Tests.cmake
tests/integration/TestAddData/: CMakeLists.txt  TestAddData.cc
tests/to-be-fixed/: TestPipelineWithAggregation.cc  TestPipelineWithJoin1.cc  TestPipelineWithJoin2.cc  TestPipelineWithJoin3.cc  TestPipelineWithJoin4.cc
tests/unit/: BufferQUnit.cc  CMakeLists.txt  Test47.cc  Test47JoinB.cc  Test47JoinC.cc  Test47JoinD.cc  Test47Selection.cc  TestBufferManager.cc  TestBufferManager2.cc  TestBufferManagerBackend.h  TestBufferManagerBackendMultiThreaded1.cc  TestBufferManagerBackendMultiThreaded2.cc  TestBufferManagerBackendMultiThreaded3.cc  TestBufferManagerBackendSingleThreaded.cc  TestBufferManagerDebugFrontend.cc  TestBufferManagerFrontendMultiThreaded1.cc  TestBufferManagerFrontendMultiThreaded2.cc  TestBufferManagerFrontendMultiThreaded3.cc  TestBufferManagerFrontendMultiThreaded4.cc  TestBufferManagerFrontendSingleThreaded.cc  TestCatalog.cc  TestCatalog1.cc  TestGeneticAggGroupPlanner.cc  TestGeneticJoinAggPlanner.cc  TestGreedyPlanner.cc  TestGreedyPlannerPrep.cc  TestJoinAggPipeline.cc  TestJoinMapWithJoinTuple.cc  TestJoinPlanner.cc  TestLogicalPlanTransformer.cc  TestMKL.cc  TestMultiPageAggSink.cc  TestPhysicalOptimizer.cc  TestPipeBuilder.cc  TestPipelineWithAggregation.cc  TestPipelineWithBroadcastJoin1.cc  TestPipelineWithJoin1.cc  TestPipelineWithJoin2.cc  TestPipelineWithJoin3.cc  TestPipelineWithJoin4.cc  (+26 more)
tests/unit/objects/: FinalQuery.h  SillyAgg.h  SillyJoinIntString.h  SillyQuery.h  SillyReadOfA.h  SillyReadOfB.h  SillyReadOfC.h  SillyWrite.h  SillyWriteIntString.h
tools/cmake/: FindMKL.cmake
(+803 files in other folders)
