# create the target
add_pdb_integration_test(TestBMM)
add_pdb_integration_test(TestCMM)
add_pdb_integration_test(TestRMM)
add_pdb_integration_test(Test3DMM)
add_pdb_integration_test(TestSUMMM)
add_pdb_integration_test(TestIndexStructure)
target_link_libraries(TestBMM ${MKL_LIBRARIES})
target_link_libraries(TestCMM ${MKL_LIBRARIES})
target_link_libraries(TestRMM ${MKL_LIBRARIES})
target_link_libraries(Test3DMM ${MKL_LIBRARIES})
target_link_libraries(TestSUMMM ${MKL_LIBRARIES})
target_link_libraries(TestIndexStructure ${MKL_LIBRARIES})

# add a build dependency to build-tests target
add_dependencies(build-integration-tests TestBMM)
add_dependencies(build-integration-tests TestCMM)
add_dependencies(build-integration-tests TestRMM)
add_dependencies(build-integration-tests TestIndexStructure)

# compile all the objects
file(GLOB files "${PROJECT_SOURCE_DIR}/applications/TestMatrixMultiply/sharedLibraries/source/*.cc")
foreach(file ${files})
    get_filename_component(fileName "${file}" NAME_WE)
    add_library(${fileName} MODULE ${file})
    target_link_libraries(${fileName} pdb-shared-common)
    target_link_libraries(${fileName} ${MKL_LIBRARIES})
    add_dependencies(shared-libraries ${fileName})
endforeach()

# add build dependencies to shared libraries it uses
add_custom_target(TensorBasic)
add_dependencies(TensorBasic TensorScanner)
add_dependencies(TensorBasic TensorWriter)

add_dependencies(TestBMM TensorBasic)
add_dependencies(TestBMM BCMMAggregation)
add_dependencies(TestBMM BCMMJoin)
add_dependencies(TestCMM TensorBasic)
add_dependencies(TestCMM BCMMAggregation)
add_dependencies(TestCMM BCMMJoin)
add_dependencies(TestRMM TensorBasic)
add_dependencies(TestRMM RMMDuplicateMultiSelection)
add_dependencies(TestRMM RMMAggregation)
add_dependencies(TestRMM RMMJoin)

add_dependencies(TestSUMMM TensorBasic)
add_dependencies(TestSUMMM MatrixSumJoin)
add_dependencies(TestSUMMM BCMMAggregation)
add_dependencies(TestSUMMM BCMMJoin)
add_dependencies(TestSUMMM IdentSelection)
